# spark-rapids-jni

./: .gitignore  .gitmodules  .pre-commit-config.yaml  1.parquet  CONTRIBUTING.md  NOTICE  README.md  after.json  build-libcudf.xml  latest.json  pom.xml  spark-rapids-jni
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  submit-question.md
.github/workflows/: add-pr-to-project.yml  add-to-project.yml  auto-merge.yml  blossom-ci.yml  check-style.yml  checkstyle.yml  clang-format.yml  license-header-check.yml  shell-check.yml  signoff-check-common.yml  signoff-check.yml  sonar.yml  sync-clang-format-version.yml
.github/workflows/action-helper/: Dockerfile  action.yml  entrypoint.sh
ci/: Dockerfile  Dockerfile.aarch64  Dockerfile.aarch64-rockylinux8  Dockerfile.multi  Jenkinsfile.premerge  check-cuda-dependencies.sh  deploy.sh  fuzz-test.sh  nightly-build.sh  premerge-build.sh  rockylinux8-build.sh  settings.xml  submodule-sync.sh
dev/: check-style.sh  checkstyle.sh  checkstyle.xml
docs/: build_for_arm64.md  memory_management.md
patches/: 0_hot_fix_parquet.patch  disable_shared_agg.patch  fix_groupby.patch  revert_nvcomp4.patch
perf-results/: RESULTS.md  run_00_baseline.txt  run_00_baseline_many_repeated.txt  run_01_p0_batch_repeated_sync.txt  run_01_p0_many_repeated.txt  run_01_p0_merge_reduce_scan.txt  run_02_p3_defer_error_check.txt  run_03_p1_combined_occurrence_scan.txt
spark-rapids-cudf/: build-libcudf.xml  pom.xml
spark-rapids-jni/: pom.xml
spark-rapids-jni/src/main/cpp/: CMakeLists.txt
spark-rapids-jni/src/main/cpp/cmake/: get_cpm.cmake
spark-rapids-jni/src/main/cpp/cmake/Modules/: ConfigureCUDA.cmake
spark-rapids-jni/src/main/cpp/src/: row_conversion.cu
src/main/cpp/: .clang-format  CMakeLists.txt  compile_commands.json
src/main/cpp/benchmarks/: CMakeLists.txt  bloom_filter.cu  cast_long_to_binary_string.cpp  cast_string_to_float.cpp  get_json_object.cu  hash.cu  parse_uri.cpp  protobuf_decode.cu  row_conversion.cpp
src/main/cpp/benchmarks/common/: generate_input.cu  generate_input.hpp  random_distribution_factory.cuh
src/main/cpp/cmake/: get_flatbuffers.cmake  get_fmt.cmake  get_nvtx.cmake  get_spdlog.cmake  version_overrides.cmake  versions.json
src/main/cpp/cmake/version_overrides/: bug_fixes.diff  thrust_faster_sort_compile_times.diff  versions.json
src/main/cpp/faultinj/: CMakeLists.txt  Makefile  README.md  faultinj.cu  libinject.cpp
src/main/cpp/profiler/: CMakeLists.txt  NvtxwEvents.cpp  NvtxwEvents.h  ProfilerJni.cpp  README-nvtxw.txt  README.md  init_nvtxw.cpp  init_nvtxw.h  initialize_nvtxw.cpp  nvtxw3.cpp  nvtxw3.h  nvtxw_events.h  profiler_debug.cpp  profiler_debug.hpp  profiler_schema.cpp.in  profiler_serializer.cpp  profiler_serializer.hpp  spark_rapids_profile_converter.cpp
src/main/cpp/profiler/nvtx3/: nvToolsExt.h  nvToolsExtCounters.h  nvToolsExtCuda.h  nvToolsExtCudaRt.h  nvToolsExtMem.h  nvToolsExtMemCudaRt.h  nvToolsExtOpenCL.h  nvToolsExtPayload.h  nvToolsExtPayloadHelper.h  nvToolsExtSemanticsCounters.h  nvToolsExtSemanticsScope.h  nvToolsExtSemanticsTime.h  nvToolsExtSync.h  nvtx3.hpp
src/main/cpp/profiler/nvtx3/nvtxDetail/: nvtxExtHelperMacros.h  nvtxExtImpl.h  nvtxExtImplCounters_v1.h  nvtxExtImplMemCudaRt_v1.h  nvtxExtImplMem_v1.h  nvtxExtImplPayload_v1.h  nvtxExtInit.h  nvtxExtPayloadHelperInternal.h  nvtxExtPayloadTypeInfo.h  nvtxExtTypes.h  nvtxImpl.h  nvtxImplCore.h  nvtxImplCudaRt_v3.h  nvtxImplCuda_v3.h  nvtxImplOpenCL_v3.h  nvtxImplSync_v3.h  nvtxInit.h  nvtxInitDecls.h  nvtxInitDefs.h  nvtxLinkOnce.h  nvtxTypes.h
src/main/cpp/profiler/nvtx3/nvtxExtDetail/: nvtxExtImpl.h  nvtxExtImplPayload_v1.h  nvtxExtInit.h
src/main/cpp/scripts/: GenerateGbkTable.java
src/main/cpp/src/: Aggregation64Utils.cpp  AggregationUtilsJni.cpp  ArithmeticJni.cpp  AverageExampleUDFJni.cpp  BloomFilterJni.cpp  BooleanUtilsJni.cpp  CaseWhenJni.cpp  CastStringJni.cpp  CharsetDecodeJni.cpp  DataSerializationJni.cpp  DateTimeRebaseJni.cpp  DateTimeUtilsJni.cpp  DecimalUtilsJni.cpp  DeviceAttrJni.cpp  GpuTimeZoneDBJni.cpp  HLL.cu  HLLJni.cpp  HLLPP.cu  HLLPP.hpp  HLLPPHostUDFJni.cpp  HLLPPJni.cpp  HashJni.cpp  HistogramJni.cpp  HostTableJni.cpp  HostUDFAggregationsJni.cpp  HyperLogLogPlusPlusHostUDFJni.cpp  IcebergDateTimeUtilJni.cpp  IcebergTruncateJni.cpp  JSONUtilsJni.cpp  JoinPrimitivesJni.cpp  KudoGpuSerializerJni.cpp  ListSliceJni.cpp  MapJni.cpp  MapUtilsJni.cpp  MapZipWithUtilsJNI.cpp  MathJni.cpp  MiscJni.cpp  MixedSortMergeJoinJni.cpp  NVMLJni.cpp  NVMLMonitorJni.cpp  (+177 more)
src/main/cpp/src/hash/: HashJni.cpp  hash.cuh  hash.hpp  hive_hash.cu  murmur_hash.cu  murmur_hash.cuh  sha.cpp  xxhash64.cu
src/main/cpp/src/iceberg/: IcebergBucketJni.cpp  IcebergDateTimeUtilJni.cpp  IcebergTruncateJni.cpp  iceberg_bucket.cu  iceberg_bucket.hpp  iceberg_datetime_util.cu  iceberg_datetime_util.hpp  iceberg_truncate.cu  iceberg_truncate.hpp
src/main/cpp/src/protobuf/: protobuf.cu  protobuf.hpp  protobuf_builders.cu  protobuf_device_helpers.cuh  protobuf_host_helpers.cuh  protobuf_host_helpers.hpp  protobuf_kernels.cu  protobuf_kernels.cuh  protobuf_types.cuh
src/main/cpp/src/utilities/: iterator.cuh
src/main/cpp/tests/: CMakeLists.txt  average_example.cu  bloom_filter.cu  cast_decimal_to_string.cpp  cast_float_to_string.cpp  cast_long_to_binary_string.cpp  cast_string.cpp  datetime_parser.cpp  datetime_rebase.cpp  datetime_utils.cpp  error_at_row.cpp  exception_with_row_index.cpp  format_float.cpp  from_json.cu  get_json_object_tests.cpp  hash.cpp  hyper_log_log_plus_plus.cu  json_generator_tests.cpp  json_parser_tests.cpp  json_path_parser.cpp  list_slice.cpp  map_utils.cpp  map_zip_with_utils.cpp  mixed_sort_merge_join.cpp  multiply.cpp  number_converter.cpp  nvml_test.cpp  pageable_pool.cpp  parse_uri.cpp  protobuf_helpers.cu  row_conversion.cpp  sequence_file.cpp  shuffle_split.cpp  shuffle_split.cu  slice.cpp  substring_index.cpp  test_utilities.hpp  timezones.cpp  utilities.cpp
src/main/fbs/: profiler.fbs
src/main/java/: timezone_info_for_orc.csv
(+231 files in other folders)
